--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
         run: |
           echo "Y_TITLE_BUILD_ARG=ye3samba" >> "$GITHUB_ENV"
-          echo "Y_VERSION_BUILD_ARG=1.0.0" >> "$GITHUB_ENV"
+          echo "Y_VERSION_BUILD_ARG=2.0.0" >> "$GITHUB_ENV"
           echo "Y_EXTRA_BUILD_ARG=" >> "$GITHUB_ENV"
           echo "Y_CREATED_VALUE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> "$GITHUB_ENV"
           echo "Y_REVISION_VALUE=${GITHUB_SHA::7}" >> "$GITHUB_ENV"
@@ -57,7 +57,7 @@ jobs:
           push: true
           tags: |
             palw3ey/${{ env.Y_TITLE_BUILD_ARG }}:latest
-            palw3ey/${{ env.Y_TITLE_BUILD_ARG }}:1.0.0
+            palw3ey/${{ env.Y_TITLE_BUILD_ARG }}:${{ env.Y_VERSION_BUILD_ARG }}
             ghcr.io/palw3ey/${{ env.Y_TITLE_BUILD_ARG }}:latest
             ghcr.io/palw3ey/${{ env.Y_TITLE_BUILD_ARG }}:${{ env.Y_VERSION_BUILD_ARG }}
             quay.io/palw3ey/${{ env.Y_TITLE_BUILD_ARG }}:latest
